--- a/index.html
+++ b/index.html
@@ -12,32 +12,109 @@
     <body>
         <div class="page-1">
             <section class="page-1-box-1">
-                <span class="judul">
+                <span class="judul-1">
                     <span class="tebal">Gerald</span> Bendry Andre Sihotang
                 </span>
-                <span class="subjudul">
+                <span class="subjudul-1">
                     Someone
                 </span>
             </section>
             <section class="page-1-box-2">
                 <ul style="padding: 0px; list-style-type: none">
                     <li style="margin: 8px; display: inline">
-                        <a class="icon-link">LinkedID</a>
+                        <a href="https://www.linkedin.com/in/gerald-sihotang-1582a7115/" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-linkedin.svg" class="filter-white">
+                        </a>
                     </li>
                     <li style="margin: 8px; display: inline">
-                        <a class="icon-link">Github</a>
+                        <a href="https://github.com/geshtng" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-github.svg" class="filter-white">
+                        </a>
                     </li>
                     <li style="margin: 8px; display: inline">
-                        <a class="icon-link">Gitlab</a>
+                        <a href="https://www.instagram.com/geshtng/" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-instagram.svg" class="filter-white">
+                        </a>
                     </li>
                     <li style="margin: 8px; display: inline">
-                        <a class="icon-link">Instagram</a>
-                    </li>
-                    <li style="margin: 8px; display: inline">
-                        <a class="icon-link">Facebook</a>
+                        <a href="https://www.facebook.com/gerald.b.sihotang" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-facebook.svg" class="filter-white">
+                        </a>
                     </li>
                 </ul>
             </section>
         </div>
+        
+        <div class="page-2">
+            <section class="page-1-box-1">
+                <span class="judul">
+                    About
+                </span>
+                <span class="subjudul">
+                    Someone who love sleep
+                </span>
+            </section>
+        </div>
+
+        <div class="page-3">
+            <section class="page-1-box-1">
+                <span class="judul" style="color: #000; margin-top: 50px;">
+                    Biodata
+                </span>
+                <span class="subjudul" style="color: #000;">
+                    Here you can see about me :)
+                </span>
+            </section>
+            <div class="flex-container">
+                <div class="story">    
+                    <button class="story-tab-button" onclick="openTab('personal-data', this, '#0a46a1')" id="open">Personal Data</button>
+                    <button class="story-tab-button" onclick="openTab('education', this, '#a11c0a')">Education</button>
+
+                    <div id="personal-data" class="story-tab-content">
+                        <h3>Personal Data</h3>
+                        <p>This is my personal data</p>
+                    </div>
+                    
+                    <div id="education" class="story-tab-content">
+                        <h3>Education</h3>
+                        <p>This is my education</p> 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="page-4">
+            <section class="page-1-box-1">
+                <span class="judul" style="font-size: 40px;">
+                    Get Closer
+                </span>
+            </section>
+            <section class="page-1-box-2" style="margin-top: 10px;">
+                <ul style="padding: 0px; list-style-type: none">
+                    <li style="margin: 8px; display: inline">
+                        <a href="https://www.linkedin.com/in/gerald-sihotang-1582a7115/" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-linkedin.svg" class="filter-white" style="height: 30px; width: 30px;">
+                        </a>
+                    </li>
+                    <li style="margin: 8px; display: inline">
+                        <a href="https://github.com/geshtng" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-github.svg" class="filter-white" style="height: 30px; width: 30px;">
+                        </a>
+                    </li>
+                    <li style="margin: 8px; display: inline">
+                        <a href="https://www.instagram.com/geshtng/" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-instagram.svg" class="filter-white" style="height: 30px; width: 30px;">
+                        </a>
+                    </li>
+                    <li style="margin: 8px; display: inline">
+                        <a href="https://www.facebook.com/gerald.b.sihotang" class="icon-link" target="_blank">
+                            <img src="img/icon/icon-facebook.svg" class="filter-white" style="height: 30px; width: 30px;">
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+
+        <script type="text/javascript" src="js/myScript.js"></script>   
     </body>
 </html>
