--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> geshtng - Home</title>
+        <title>geshtng</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
                     <span class="tebal">Gerald</span> Bendry Andre Sihotang
                 </span>
                 <span class="subjudul-1">
-                    Someone
+                    Software Engineer
                 </span>
             </section>
             <section class="page-1-box-2">
@@ -51,7 +51,7 @@
                     About
                 </span>
                 <span class="subjudul">
-                    Someone who love sleep
+                    Someone who love to code
                 </span>
             </section>
         </div>
@@ -65,20 +65,36 @@
                     Here you can see about me :)
                 </span>
             </section>
-            <div class="flex-container">
-                <div class="story">    
-                    <button class="story-tab-button" onclick="openTab('personal-data', this, '#0a46a1')" id="open">Personal Data</button>
-                    <button class="story-tab-button" onclick="openTab('education', this, '#a11c0a')">Education</button>
-
-                    <div id="personal-data" class="story-tab-content">
-                        <h3>Personal Data</h3>
-                        <p>This is my personal data</p>
-                    </div>
-                    
-                    <div id="education" class="story-tab-content">
-                        <h3>Education</h3>
-                        <p>This is my education</p> 
-                    </div>
+            <div class="grid-container">
+                <div class="story-photo">    
+                    <img src="img/photo/myPhoto.jpg">
+                </div>
+                <div class="story-data">    
+                    <table class="story-data-table">
+                        <tr>
+                            <td class="tebal">Name:</td>
+                            <td>Gerald Bendry Andre Sihotang</td>
+                        </tr>
+                        <tr>
+                            <td class="tebal">DoB:</td>
+                            <td>Medan, 13 October 1998</td>
+                        </tr>
+                        <tr>
+                            <td class="tebal">Address:</td>
+                            <td>13 Pendidikan St, Parlilitan</td>
+                        </tr>
+                        <tr>
+                            <td class="tebal">Email:</td>
+                            <td>sihotangg@gmail.com</td>
+                        </tr>
+                    </table>
+                    <br>
+                    <p class="quotes">
+                        "I am a simple man. I see new technologies, I learn it."
+                    </p>
+                    <p>
+                        I like to code especially for the backend because I like working behind the scenes.
+                    </p>
                 </div>
             </div>
         </div>
@@ -113,8 +129,6 @@
                     </li>
                 </ul>
             </section>
-        </div>
-
-        <script type="text/javascript" src="js/myScript.js"></script>   
+        </div> 
     </body>
 </html>
